Se realizaron cambios menores

--- a/index.html
+++ b/index.html
@@ -3,15 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Document</title>
 </head>
 <body>
-    
-    <h1>alta pagina wacho</h1>
+
+    <header>
 
 
+    </header>
+
+    <main>
+
+        <h1>alta pagina wacho</h1>
+        <h3>si</h3>
 
 
+    </main>
+
+    <footer>
+
+
+    </footer>
 
     <script src="./app.js"></script>
 </body>
