--- a/index.html
+++ b/index.html
@@ -3,14 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/main.css">
     <title>Document</title>
 </head>
 <body>
 
-    <header>
+    <header class="header">
 
+        <div class="sign">
+            <p> Toda la informacion de tus personajes favoritos en un solo lugar </p>
+        </div>
 
+        <div class="navBar">
+
+            <div style="display: flex; flex-direction: row;">
+
+                <div class="logo">
+                    <img src="./images/harry-potter-logo.png" title="Harry Potter" alt="Logo Harry Potter">
+                </div>
+
+                <div style="display: flex; align-items: center;">
+                <h2 class="subtitle">- API</h2>
+                </div>
+            
+            </div>
+
+        </div>
+
+        <nav>
+
+            <ul class="navbar-links">
+                <li><a href="/pages/servicios.html">Tus favoritos</a></li>
+                <li><a href="/pages/equipo.html">Escuelas</a></li>
+                <li><a href="/pages/contacto.html">Contacto</a></li>
+            </ul>
+
+        </nav>
     </header>
 
     <main>
