--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +8,12 @@
 </head>
 <body>
 
+    <nav class="navbar">
+      <div class="navbar__inner">
+        <div class="navbar__brand">
+          <h1 class="navbar__title">Harry Hipopotter</h1>
+        </div>
+    </nav>
     <header>
 
 
