Se creo la funcionalidad para mostrar las cards con los personajes principales en el inicio y sus clases

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/main.css">
-    <title>Document</title>
+    <title>Personajes harry Potter</title>
 </head>
 <body>
 
@@ -35,7 +35,7 @@
             <ul class="navbar-links">
                 <li><a href="/pages/servicios.html">Tus favoritos</a></li>
                 <li><a href="/pages/equipo.html">Escuelas</a></li>
-                <li><a href="/pages/contacto.html">Contacto</a></li>
+                <li><a href="favoritos.html" id="link-favoritos">Favoritos</a></li>
             </ul>
 
         </nav>
@@ -43,9 +43,8 @@
 
     <main>
 
-        <h1>alta pagina wacho</h1>
-        <h3>si</h3>
-
+        <h1 class="subtitle"> Personajes Principales </h1>
+        <div id="cards-container" class="cards-container"></div>
 
     </main>
 
