Se creo la pagina de casas para ver los personajes segun la casa a la que pertenecen, su clase y la funcionalidad para filtrar los personajes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <nav>
 
             <ul class="navbar-links">
-                <li><a href="/pages/equipo.html">Escuelas</a></li>
+                <li><a href="/pages/casas/casas.html">Casas</a></li>
                 <li><a id="open-favs">Ver favoritos</a></li>
             </ul>
 
