Se agrego un footer a las paginas

--- a/index.html
+++ b/index.html
@@ -57,9 +57,10 @@
 
     </main>
 
-    <footer>
+    <footer class="footer">
 
-
+        <p>© 2025 - Proyecto Harry Potter · Ignacio Uhrin · Mateo Escobar</p>
+        
     </footer>
 
     <script src="./app.js"></script>
