--- a/pages/casas/casas.html
+++ b/pages/casas/casas.html
@@ -45,6 +45,12 @@
         <div id="contenedor-casas"></div>
     </main>
 
+    <footer class="footer">
+
+        <p>© 2025 - Proyecto Harry Potter · Ignacio Uhrin · Mateo Escobar</p>
+        
+    </footer>
+
     <script src="casas.js"></script>
 </body>
 </html>
