al tocar el logo en el apartado de casas, vuelve al menú inicial

--- a/pages/casas/casas.html
+++ b/pages/casas/casas.html
@@ -19,7 +19,9 @@
             <div style="display: flex; flex-direction: row;">
 
                 <div class="logo">
-                    <img src="/images/harry-potter-logo.png" title="Harry Potter" alt="Logo Harry Potter">
+                    <a href="/index.html">
+                        <img src="/images/harry-potter-logo.png" title="Harry Potter" alt="Logo Harry Potter">
+                    </a>
                 </div>
 
                 <div style="display: flex; align-items: center;">
