--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="icon" href="/images/Logo-Chico.png">
+
     <title>Personajes harry Potter</title>
 </head>
 <body>
@@ -60,7 +62,7 @@
     <footer class="footer">
 
         <p>© 2025 - Proyecto Harry Potter · Ignacio Uhrin · Mateo Escobar</p>
-        
+
     </footer>
 
     <script src="./app.js"></script>
