--- a/pages/casas/casas.html
+++ b/pages/casas/casas.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Casas de Hogwarts</title>
     <link rel="stylesheet" href="/styles/main.css">
+    <link rel="icon" href="/images/Logo-Chico.png">
+
 </head>
 <body>
 
@@ -19,7 +21,9 @@
             <div style="display: flex; flex-direction: row;">
 
                 <div class="logo">
-                    <img src="/images/harry-potter-logo.png" title="Harry Potter" alt="Logo Harry Potter">
+                    <a href="/index.html">
+                        <img src="/images/harry-potter-logo.png" title="Harry Potter" alt="Logo Harry Potter">
+                    </a>
                 </div>
 
                 <div style="display: flex; align-items: center;">
